k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-backend
  namespace: task-manager
spec:
  type: ClusterIP
  selector:
    app: task-backend
  ports:
    - port: 3000
      targetPort: 3000
