k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-frontend
  namespace: task-manager
spec:
  type: ClusterIP
  selector:
    app: task-frontend
  ports:
    - port: 80
      targetPort: 80
